feat: :sparkles: se agregfo el evento de escuahca para manejar la imagen que se muestra

--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 
 </head>
 <body>
-    <div class="consulta">
-        <label for="">Ingrese el nombre del pokemon:</label>
-        <input type="text">
-    </div>
-    <div class="resultado">
-        <div>
-            <img src="https://pokeapi.co/api/v2/pokemon/21/" alt="">
-            <h1>hola</h1>
+    <div class="container">
+        <div class="consulta">
+            <label for="">Ingrese el nombre del pokemon:</label>
+            <input type="text" name="idPokemon" id="idPokemon">
+        </div>
+        <div class="resultado">
+
+            
         </div>
     </div>
 </body>
